myWeatherApp commited