@@ -1,6 +1,9 @@
 package MyPackage;
 
+import jakarta.servlet.ServletContextEvent;
+import jakarta.servlet.ServletContextListener;
 import jakarta.servlet.ServletException;
+import jakarta.servlet.annotation.WebListener;
 import jakarta.servlet.annotation.WebServlet;
 import jakarta.servlet.http.HttpServlet;
 import jakarta.servlet.http.HttpServletRequest;
@@ -8,10 +11,16 @@ import jakarta.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.io.PrintWriter;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.sql.Date;
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.Scanner;
+import java.util.concurrent.atomic.AtomicReference;
 
 import com.google.gson.Gson;
 import com.google.gson.JsonObject;
@@ -46,7 +55,7 @@ public class MyServlet extends HttpServlet {
 	@SuppressWarnings("deprecation")
 	protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
 		// TODO Auto-generated method stub
-
+		
 		//API setup
 		String apiKey = "a020b6598da3ee692f8984296d578634";
 		
@@ -57,7 +66,14 @@ public class MyServlet extends HttpServlet {
 		String apiUrl = "https://api.openweathermap.org/data/2.5/weather?q=" + city + "&appid=" + apiKey;
 		
 		//API Integeration
-		URL url = new URL(apiUrl);
+		URI uri = null;
+		try {
+			uri = new URI(apiUrl);
+		} catch (URISyntaxException e) {
+			// TODO Auto-generated catch block
+			e.printStackTrace();
+		}
+		URL url = uri.toURL();
 		HttpURLConnection connection = (HttpURLConnection)url.openConnection();
 		connection.setRequestMethod("GET");
 		
@@ -69,7 +85,7 @@ public class MyServlet extends HttpServlet {
 		StringBuilder responseContent = new StringBuilder();
 		
 		//input lene ke liye from the reader, will create Scanner object
-		Scanner scanner = new Scanner(reader);
+		Scanner scanner = new Scanner(reader); 
 		
 		while(scanner.hasNext()) {
 			responseContent.append(scanner.nextLine());
@@ -79,11 +95,12 @@ public class MyServlet extends HttpServlet {
 		//TypeCasting: parsing the data into JSON
 		Gson gson = new Gson();
 		JsonObject jsonobject = gson.fromJson(responseContent.toString(), JsonObject.class);
-//		System.out.println(jsonobject);
+		System.out.println(jsonobject);
 		
 		//date and time
 		long dateTimestamp = jsonobject.get("dt").getAsLong()*1000;
-		String date = new Date(dateTimestamp).toString();
+//		String date = new Date(dateTimestamp).toString();
+		String date = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd//HH:mm:ss"));
 		
 		//temperature
 		double temperatureKelvin = jsonobject.getAsJsonObject("main").get("temp").getAsDouble();
@@ -110,7 +127,10 @@ public class MyServlet extends HttpServlet {
 		connection.disconnect();
 		
 		request.getRequestDispatcher("index.jsp").forward(request, response);
+
 		
 	}
 
 }
+
+
